Corrected displayed spacing

--- a/app/assets/skins/ui/oxide/skin.css
+++ b/app/assets/skins/ui/oxide/skin.css
@@ -4,6 +4,10 @@
  * For LGPL see License.txt in the project root for license information.
  * For commercial licenses see https://www.tiny.cloud/
  */
+p {
+  margin-block-start: 0 !important;
+  margin-block-end: 0 !important;
+}
 .tox,
 .tox *:not(svg) {
   background: transparent;
